# Seichijunrei-agent

./: .codacy.yml  .dockerignore  .env.example  .env.test.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  DEPLOYMENT.md  DESIGN.md  DOCS.adk.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.ja.md  README.md  README.zh.md  SPEC.md  SPRINT_AGENT_A.md  SPRINT_AGENT_B.md  SPRINT_AGENT_C.md  SPRINT_PLAN.md  TODO.adk.md  TODOS.md  agent.py  claude.md  codecov.yml  findings.md  health.py  package-lock.json  package.json  progress.md  pyproject.toml  pytest.ini  requirement.md  requirements.txt  skills-lock.json  (+3 more)
.claude/: ralph-loop.local.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-agent.yml  deploy.yml
.serena/: project.yml
Claude-Context/: data-flow.md  tasks-tdd.md  user-stories.md
adk_agents/: __init__.py
adk_agents/seichijunrei_bot/: __init__.py  _schemas.py  _state.py  agent.py  mcp_toolsets.py  skills.py
agents/: __init__.py  base.py  executor_agent.py  filter_agent.py  intent_agent.py  models.py  orchestrator_agent.py  pipeline.py  planner_agent.py  poi_agent.py  retriever.py  route_agent.py  search_agent.py  sql_agent.py  transport_agent.py  weather_agent.py
application/: __init__.py  errors.py
application/ports/: __init__.py  anitabi.py  bangumi.py  route_planner.py  translation.py
application/use_cases/: __init__.py  fetch_bangumi_points.py  get_bangumi_subject.py  plan_route.py  search_anitabi_bangumi_near_station.py  search_bangumi_subjects.py  translation.py
backend/agents/: __init__.py  agent_result.py  base.py  executor_agent.py  geo_utils.py  guardrails.py  intent_classifier.py  messages.py  models.py  pilgrimage_agent.py  pilgrimage_runner.py  pilgrimage_tools.py  pipeline.py  planner_agent.py  retriever.py  route_area_splitter.py  route_export.py  route_optimizer.py  runtime_deps.py  runtime_models.py  selected_route.py  sql_agent.py  tools.py  translation.py  web_tools.py
backend/application/: errors.py
backend/clients/: __init__.py  anitabi.py  bangumi.py  base.py  cache_mixin.py  retry.py
backend/config/: __init__.py  settings.py
backend/domain/: entities.py  llm_schemas.py  ports.py
backend/interfaces/: __init__.py  fastapi_service.py  http_service.py  persistence.py  public_api.py  response_builder.py  schemas.py  session_facade.py
backend/scripts/: seed_data.py
backend/services/: __init__.py  cache.py  retry.py
backend/tests/: conftest.py  conftest_db.py
backend/tools/: eval_feedback_miner.py  eval_scorer.py
backend/utils/: logger.py
clients/: __init__.py  anitabi.py  anitabi_gateway.py  bangumi.py  bangumi_gateway.py  base.py  errors.py  google_maps.py  weather.py
clients/python/: seichijunrei_client.py
config/: __init__.py  settings.py
contracts/: __init__.py
contracts/a2ui/: __init__.py  action_ids.py  actions.py  components.py  message_types.py  messages.py  payloads.py  session.py  types.py
deploy/: config.yaml  deploy.py
docker/a2ui/: Dockerfile
docs/: ARCHITECTURE.md  DOCS_POLICY.md  MCP_VERIFICATION.md  analysis_files.txt  code_smell_analysis_report.md  code_smell_summary.md  findings.md  fix_implementation_summary.md  fix_plan_adk_best_practices.md  frontend-feature-dev.md  frontend-redesign-journey.md  image-prompts.md  pdf_implementation_plan.md  progress.md  task_plan.md  testing-strategy.md  typing-rules.md
docs/a2ui/: ACTIONS.md  CONTRACT.md  MESSAGE_CATALOG.md  SESSION_MODEL.md
docs/archive/: frontend-feature-dev-a2ui.md  frontend-zero-redesign.md  stability-review-2026-03-24.md
docs/decisions/: ADK_EVAL_WORKFLOW.md  CONFIG_ARCHITECTURE.md  DEPLOYMENT_UNITS.md  ERROR_MODEL.md  MCP_CLOSE_WARNING.md  MCP_GAP_ANALYSIS.md  MCP_TOPOLOGY.md  TOOL_ERROR_CONTRACT.md
docs/iterations/: README.md
docs/mockups/: 00-color-test.html  00-logo-options.html  01-welcome.html  02-search-results.html  03-route-planning.html  04-nearby-clarification.html  chat-popup-test.html  final-unified.html  final-v2.html  live-demo.html  route-options.html  unified-mockup.html  variant-A-editorial.html  variant-B-compact.html  variant-B-refined.html  variant-C-cinematic.html
docs/ops/: README.md  cloudflare-hardening.md  deployment.md
docs/specs/: frontend-redesign.md
domain/: entities.py  errors.py
frontend/: .env.local.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.test.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/contexts/: PointSelectionContext.tsx  SuggestContext.tsx
frontend/hooks/: useChat.ts  useConversationHistory.ts  useConversationSync.ts  useLayoutMode.ts  useMediaQuery.ts  useMockChat.ts  usePointSelection.ts  useRouteExport.ts  useRouteSelection.ts  useScrollReveal.ts  useSession.ts  useSessionHydration.ts
frontend/lib/: api-keys.ts  api.ts  color.ts  conversation-history.ts  demo-data.ts  geo.ts  i18n-context.tsx  i18n.ts  japanRegions.ts  locale.ts  mock-data.ts  quick-actions.ts  structured-data.ts  supabase.ts  time-utils.ts  types.ts  url.ts
frontend/mocks/: MSWProvider.tsx  handlers.ts
frontend/public/: robots.txt  sitemap.xml
frontend/tests/: AuthGate-landing.test.tsx  ChatHeader.test.tsx  ChatInput-location.test.tsx  ChatPanel.test.tsx  ConversationDrawer.test.tsx  DesktopSidebar.test.tsx  IconSidebar.test.tsx  LandingData.test.ts  api-split.test.ts  (+52 more)
infrastructure/: __init__.py
interfaces/: __init__.py  http_service.py  public_api.py
scripts/: feedback_to_eval.py  qa_auth.py  qa_login.sh  seed_data.py  smoke_test.py
services/: __init__.py  cache.py  retry.py  route_planner_gateway.py  session.py  simple_route_planner.py
src/: worker.js
supabase/: .gitignore  config.toml
templates/: pdf_bangumi.html  pdf_cover.html  pdf_itinerary.html  pdf_main.html
tests/: conftest.py
tools/: __init__.py  base.py  eval_feedback_miner.py  eval_scorer.py  map_generator.py  pdf_generator.py
utils/: __init__.py  llm.py  logger.py
worker/: worker.js
(+551 files in other folders)
