[project]
name = "seichijunrei"
version = "0.1.0"
description = "AI-powered travel assistant for anime pilgrims using Gemini LLM"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Seichijunrei Team", email = "team@seichijunrei.com"}
]
keywords = ["anime", "travel", "ai", "gemini", "seichijunrei", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Dependencies
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",

    # Async/HTTP
    "aiohttp>=3.12.0",
    "httpx>=0.28.0",

    # Google APIs (keep for Maps geocoding)
    "googlemaps>=4.10.0",

    # Observability
    "structlog>=25.0.0",
    "rich>=14.0.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",

    # Google Generative AI (model-agnostic, used by pydantic-ai)
    "google-genai>=1.16.0",

    # v2: Agent Framework
    "pydantic-ai>=1.69.0",

    # v2: Observability (Logfire)
    "logfire[pydantic-ai]>=4.29.0",

    # v2: Database (Supabase + PostGIS)
    "supabase>=2.28.0",
    "asyncpg>=0.31.0",
]

[project.scripts]
seichijunrei-api = "interfaces.http_service:main"

[project.optional-dependencies]
redis = [
    "redis>=5.3.0",
]
firestore = [
    "google-cloud-firestore>=2.22.0",
]
observability = [
    "opentelemetry-exporter-otlp>=1.39.0",
]
dev = [
    # Testing
    "pytest>=9.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",

    # Code Quality
    "black>=26.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "application", "clients", "config", "contracts", "domain", "infrastructure", "interfaces", "services", "utils"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    ".uv_python/*",
    "*/.uv_python/*",
    ".uv_cache/*",
    "*/.uv_cache/*",
    ".uv-cache/*",
    "*/.uv-cache/*",
    "*/site-packages/*",
    # External service adapters (require actual services to test)
    "infrastructure/session/redis.py",
    "infrastructure/session/firestore.py",
    # Translation gateway (requires external service)
    "infrastructure/gateways/translation.py",
    # Observability (requires external exporters)
    "infrastructure/observability/exporters.py",
    "infrastructure/observability/metrics.py",
    "infrastructure/observability/tracing.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
