[project]
name = "seichijunrei"
version = "0.1.0"
description = "AI-powered travel assistant for anime pilgrims using Gemini LLM"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Seichijunrei Team", email = "team@seichijunrei.com"}
]
keywords = ["anime", "travel", "ai", "gemini", "seichijunrei", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Dependencies
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",

    # Async/HTTP
    "aiohttp>=3.13.5",
    "httpx>=0.28.0",

    # Observability
    "structlog>=25.0.0",
    "rich>=14.0.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",

    # Google Generative AI (model-agnostic, used by pydantic-ai)
    "google-genai>=1.16.0",

    # v2: Agent Framework
    "pydantic-ai>=1.69.0",

    # v2: Database (Postgres + PostGIS)
    "asyncpg>=0.31.0",

    # HTTP runtime adapter
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
seichijunrei-api = "backend.interfaces.fastapi_service:main"

[project.optional-dependencies]
observability = [
    "opentelemetry-exporter-otlp>=1.39.0",
]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",

    # Code Quality
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    ".uv_python/*",
    "*/.uv_python/*",
    ".uv_cache/*",
    "*/.uv_cache/*",
    ".uv-cache/*",
    "*/.uv-cache/*",
    "*/site-packages/*",
    # Observability (requires external exporters)
    "backend/infrastructure/observability/exporters.py",
    "backend/infrastructure/observability/metrics.py",
    "backend/infrastructure/observability/tracing.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "backend.agents.models",
    "backend.domain.entities",
    "backend.domain.llm_schemas",
    "backend.interfaces.public_api",
]
disallow_any_explicit = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "testcontainers[postgres]>=4.14.2",
]
